Ensure images size properly on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ main {
 
 .images img {
     max-width: 400px;
-    margin-bottom: 5px
+    margin-bottom: 5px;
 }
 
 footer {
@@ -71,5 +71,9 @@ footer .footer_logo {
     footer {
         flex-direction: column;
         align-items: center;
+    }
+
+    .images img {
+        width: 100%;
     }
 }
